# Sen.Environment

./: .gitignore  README.md  index.html
Kernel/: CMakeLists.txt  README.md  build.ps1
Kernel/dependencies/ETCPACK/: CMakeLists.txt  _etcpack.hpp
Kernel/dependencies/PVRTCCompressor/: CMakeLists.txt
Kernel/dependencies/RectangleBinPack/: CMakeLists.txt
Kernel/dependencies/Rijndael/: CMakeLists.txt
Kernel/dependencies/SHA/: CMakeLists.txt  SHA384.cpp  SHA512.cpp
Kernel/dependencies/SHA224CryptoServiceProvider/: CMakeLists.txt  SHA224CryptoServiceProvider.cpp  SHA224CryptoServiceProvider.h  main.cpp
Kernel/dependencies/SHA256/: CMakeLists.txt
Kernel/dependencies/avir/: CMakeLists.txt  README.md  lancir.h
Kernel/dependencies/backward-cpp/: CMakeLists.txt
Kernel/dependencies/base64/: CMakeLists.txt  main.c
Kernel/dependencies/canvas_ity/: CMakeLists.txt  canvas_ity.hpp
Kernel/dependencies/compile-time-regular-expressions/: CMakeLists.txt
Kernel/dependencies/cpp-base64/: CMakeLists.txt
Kernel/dependencies/dirent/: CMakeLists.txt
Kernel/dependencies/etc1/: CMakeLists.txt  etc1.cpp
Kernel/dependencies/etcpak/: BlockData.cpp  BlockData.hpp  CMakeLists.txt
Kernel/dependencies/fifo_map/: CMakeLists.txt
Kernel/dependencies/fmt/: CMakeLists.txt
Kernel/dependencies/json/: CMakeLists.txt
Kernel/dependencies/libpng/: CMakeLists.txt
Kernel/dependencies/lzma/: CMakeLists.txt
Kernel/dependencies/magic_enum/: CMakeLists.txt  magic_enum_format.hpp
Kernel/dependencies/md5/: CMakeLists.txt  md5.cpp  md5.h
Kernel/dependencies/open_vcdiff/: CMakeLists.txt
Kernel/dependencies/quickjs/: CMakeLists.txt  quickjs.c
Kernel/dependencies/quickjs.c_smile/: CMakeLists.txt  quickjs.c
Kernel/dependencies/simdjson/: CMakeLists.txt  simdjson.h
Kernel/dependencies/tinyxml2/: CMakeLists.txt
Kernel/dependencies/tsl/: CMakeLists.txt
Kernel/dependencies/tsl/include/tsl/: ordered_hash.h
Kernel/dependencies/zip/: CMakeLists.txt
Kernel/dependencies/zlib/: CMakeLists.txt
Kernel/kernel/: CMakeLists.txt
Kernel/kernel/definition/: assert.hpp  library.hpp  literal.hpp  macro.hpp  range.hpp  utility.hpp
Kernel/kernel/definition/basic/: apng_maker.hpp  array.hpp  buffer.hpp  collections.hpp  filesystem.hpp  image.hpp  json.hpp  json_writer.hpp  language.hpp  list.hpp  math.hpp  max_rects_lite.hpp  path.hpp  pointer.hpp  string.hpp  system.hpp  thread.hpp  timer.hpp  utf8json.hpp  utility.hpp
Kernel/kernel/definition/buffer/: vector.hpp
Kernel/kernel/definition/compression/: bzip2.hpp  lzma.hpp  zip.hpp  zlib.hpp
Kernel/kernel/definition/diff/: vcdiff.hpp
Kernel/kernel/definition/encryption/: Rijndael.hpp  base64.hpp  crc.hpp  crc32.hpp  fnv.hpp  md5.hpp  sha224.hpp  sha256.hpp  sha384.hpp  sha512.hpp  xor.hpp
Kernel/kernel/definition/encryption/Rijndael/: common.hpp
Kernel/kernel/definition/encryption/XOR/: common.hpp
Kernel/kernel/definition/encryption/base64/: common.hpp
Kernel/kernel/definition/encryption/md5/: common.hpp
Kernel/kernel/definition/encryption/sha224/: common.hpp
Kernel/kernel/definition/encryption/sha256/: common.hpp
Kernel/kernel/definition/encryption/sha512/: common.hpp
Kernel/kernel/definition/filesystem/: common.hpp
Kernel/kernel/definition/image/: common.hpp
Kernel/kernel/definition/javascript/: converter.hpp  runtime.hpp
Kernel/kernel/definition/json/: object.hpp
Kernel/kernel/definition/path/: common.hpp
Kernel/kernel/definition/pointer/: common.hpp
Kernel/kernel/definition/string/: common.hpp
Kernel/kernel/definition/timer/: common.hpp
Kernel/kernel/dependencies/: ETCPACK.hpp  PVRTCCompressor.hpp  RectangleBinPack.hpp  Rijndael.hpp  SHA.hpp  SHA224CryptoServiceProvider.hpp  SHA256.hpp  avir.hpp  backward-cpp.hpp  base64.hpp  bzip2.hpp  canvas_ity.hpp  compile-time-regular-expressions.hpp  cpp-base64.hpp  dirent.hpp  etc1.hpp  etcpak.hpp  fifo_map.hpp  fmt.hpp  json.hpp  libpng.hpp  lzma.hpp  magic_enum.hpp  md5.hpp  open_vcdiff.hpp  quickjs.hpp  simdjson.hpp  tinyxml2.hpp  tsl.hpp  zip.hpp  zlib.hpp
Kernel/kernel/interface/: callback.cpp  callback.h  callback.hpp  cli.hpp  data.hpp  interface.cpp  script.hpp  shell.hpp  version.hpp
Kernel/kernel/support/: utility.hpp
Kernel/kernel/support/marmalade/dzip/: common.hpp  definition.hpp  pack.hpp  unpack.hpp
Kernel/kernel/support/miscellaneous/: shared.hpp
Kernel/kernel/support/popcap/animation/: common.hpp  decode.hpp  definition.hpp  encode.hpp
Kernel/kernel/support/popcap/atlas/: split.hpp
Kernel/kernel/support/popcap/cfw2/: decode.hpp  definition.hpp  encode.hpp
Kernel/kernel/support/popcap/character_font_widget_2/: decode.hpp  definition.hpp  encode.hpp
Kernel/kernel/support/popcap/compiled_text/: decode.hpp  encode.hpp
Kernel/kernel/support/popcap/crypt_data/: decrypt.hpp  definition.hpp  encrypt.hpp
Kernel/kernel/support/popcap/new_type_object_notation/: decode.hpp  encode.hpp
Kernel/kernel/support/popcap/newton/: decode.hpp  encode.hpp
Kernel/kernel/support/popcap/package/: common.hpp  definition.hpp  pack.hpp  unpack.hpp
Kernel/kernel/support/popcap/pak/: definition.hpp  pack.hpp  unpack.hpp
Kernel/kernel/support/popcap/particles/: common.hpp  decode.hpp  definition.hpp  encode.hpp  from_xml.hpp  to_xml.hpp  version.hpp
Kernel/kernel/support/popcap/player_info/: common.hpp  decode.hpp  definition.hpp  encode.hpp
Kernel/kernel/support/popcap/pvz2/: common.hpp  decode.hpp  definition.hpp  encode.hpp  pack.hpp  unpack.hpp
Kernel/kernel/support/popcap/re_animation/: common.hpp  decode.hpp  definition.hpp  encode.hpp  from_xml.hpp  to_xml.hpp
Kernel/kernel/support/popcap/reanim/: decode.hpp  definition.hpp  encode.hpp
Kernel/kernel/support/popcap/rsb/: pack.hpp  (+3 more)
Kernel/kernel/support/texture/: common.hpp  decode.hpp  encode.hpp  invoke.hpp
Kernel/test/: CMakeLists.txt  main.cpp
Launcher/: CMakeLists.txt  launcher.cpp
Shell/: CMakeLists.txt  README.md  Shell.cpp  Shell.h  String.hpp  shell.cpp  shell.rc
Shell/callback/: method.hpp
Shell/interactive/: color.hpp
Shell/resource/windows/: application.manifest
(+428 files in other folders)
